src/routes/app.css
.app {
  font-size: 1rem;
  outline: none;
}

.ui {
  font-size: 16px;
}

.notes-pane {
  position: fixed;
  height: 5.5em;
  bottom: 0;
  left: 0;
  right: 0;
  resize: none;
  border: 0;
  border-radius: 0.5em 0.5em 0 0;
  padding: 1em;
  box-sizing: border-box;
  background-color: var(--bg-base);
  color: var(--fg);
  font-family:
    'Sant Lipi',
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Roboto',
    'Oxygen',
    'Ubuntu',
    'Cantarell',
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    Arial,
    sans-serif;
  font-weight: 500;
  font-size: 1rem;
}

html[data-mode='presenter'] .notes-pane {
  text-align: center;
}

.notes-pane::-webkit-scrollbar {
  display: none;
}

html[data-mode='classic'] .line {
  margin-bottom: 1.5em;
}

html[data-mode='classic'] .line:last-child {
  margin-bottom: 0;
}

html[data-mode='reader'] article p.bold::before {
  content: '\0020';
}

html[data-mode='reader'] .line > p,
html[data-mode='saral'] .line > p {
  display: none;
}

html[data-mode='reader'] .line,
html[data-mode='reader'] .line > p.bold,
html[data-mode='saral'] .line > p.bold {
  display: inline;
  line-height: 1.6;
}

html[data-mode='saral'] .line {
  display: block;
}

html[data-mode='reader'] .title,
html[data-mode='saral'] .title {
  display: block;
  font-size: 1.25em;
}

html[data-mode='reader'] .title > p,
html[data-mode='saral'] .title > p {
  line-height: 1.2;
}

html[data-mode='reader'] .title > p.bold,
html[data-mode='saral'] .title > p.bold {
  font-weight: 230;
  font-size: 1.15em;
}

html[data-mode='reader'] .line:not(.title) + .title,
html[data-mode='saral'] .line:not(.title) + .title {
  margin-top: 1.2em;
}

html[data-mode='reader'] .title + .line:not(.title)::before,
html[data-mode='saral'] .title + .line:not(.title)::before {
  content: '\A';
  white-space: pre;
  font-size: 0.5em;
  display: block;
}

html[data-mode='reader'] .end-of-pauri:after,
html[data-mode='saral'] .end-of-pauri:after {
  content: '\A\A';
  white-space: pre;
  font-size: 0.25em;
  display: block;
}

html[data-mode='presenter'] .app > div > article {
  height: calc(100vh - 56px);
  scroll-snap-type: y mandatory;
  overflow-y: auto;
  font-size: 1em;
}

html[data-mode='presenter']::-webkit-scrollbar {
  display: none;
}

html[data-mode='presenter'] .line {
  margin-top: 0;
  padding-top: 24px;
  height: calc(100vh - 56px - 48px - 1.75em - 48px);
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 0.5em;
  scroll-snap-align: start;
  scroll-snap-stop: always;
}

html[data-mode='presenter'] p.bold {
  font-size: 1.75em;
  line-height: 1.25;
}

@media (max-device-width: 480px) {
  .controls__width {
    display: none;
  }
}

@media (pointer: coarse) {
  .notes-pane,
  main > div,
  header > div,
  footer > div {
    width: inherit;
    max-width: 100%;
  }
}

.notes-pane,
main > div,
header > div {
  max-width: 100%;
}

html[data-width='narrower'][data-mode='classic'] main > div,
html[data-width='narrower'][data-mode='classic'] header > div,
html[data-width='narrower'][data-mode='classic'] .notes-pane,
html[data-width='narrower'][data-mode='saral'] main > div,
html[data-width='narrower'][data-mode='saral'] header > div,
html[data-width='narrower'][data-mode='saral'] .notes-pane,
html[data-width='narrower'][data-mode='reader'] main > div,
html[data-width='narrower'][data-mode='reader'] header > div,
html[data-width='narrower'][data-mode='reader'] .notes-pane {
  width: 23.5rem;
}

html[data-width='base'][data-mode='classic'] main > div,
html[data-width='base'][data-mode='classic'] header > div,
html[data-width='base'][data-mode='classic'] .notes-pane,
html[data-width='base'][data-mode='saral'] main > div,
html[data-width='base'][data-mode='saral'] header > div,
html[data-width='base'][data-mode='saral'] .notes-pane,
html[data-width='base'][data-mode='reader'] main > div,
html[data-width='base'][data-mode='reader'] header > div,
html[data-width='base'][data-mode='reader'] .notes-pane {
  width: 29.5rem;
}

html[data-width='wider'][data-mode='classic'] main > div,
html[data-width='wider'][data-mode='classic'] header > div,
html[data-width='wider'][data-mode='classic'] .notes-pane,
html[data-width='wider'][data-mode='saral'] main > div,
html[data-width='wider'][data-mode='saral'] header > div,
html[data-width='wider'][data-mode='saral'] .notes-pane,
html[data-width='wider'][data-mode='reader'] main > div,
html[data-width='wider'][data-mode='reader'] header > div,
html[data-width='wider'][data-mode='reader'] .notes-pane {
  width: 41rem;
}

html[data-width='widest'][data-mode='classic'] main > div,
html[data-width='widest'][data-mode='classic'] header > div,
html[data-width='widest'][data-mode='classic'] .notes-pane,
html[data-width='widest'][data-mode='saral'] main > div,
html[data-width='widest'][data-mode='saral'] header > div,
html[data-width='widest'][data-mode='saral'] .notes-pane,
html[data-width='widest'][data-mode='reader'] main > div,
html[data-width='widest'][data-mode='reader'] header > div,
html[data-width='widest'][data-mode='reader'] .notes-pane {
  width: 100%;
  max-width: 100%;
}

html[data-mode='presenter'] main > div,
html[data-mode='presenter'] header > div,
html[data-mode='presenter'] .notes-pane {
  width: 100%;
}

